--- a/LearningCenter.Service/Properties/launchSettings.json
+++ b/LearningCenter.Service/Properties/launchSettings.json
@@ -10,18 +10,18 @@
   },
   "profiles": {
     "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "api/users",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+        "commandName": "IISExpress",
+        "launchBrowser": true,
+        "launchUrl": "swagger/index.html",
+        "environmentVariables": {
+            "ASPNETCORE_ENVIRONMENT": "Development"
+        }
     },
     "LearningCenter.Service": {
         "commandName": "Project",
         "dotnetRunMessages": "true",
         "launchBrowser": true,
-        "launchUrl": "api/users",
+        "launchUrl": "swagger/index.html",
         "applicationUrl": "http://localhost:5000",
         "environmentVariables": {
             "ASPNETCORE_ENVIRONMENT": "Development"
